Update UI + Fix bug v2

--- a/brand.html
+++ b/brand.html
@@ -18,7 +18,8 @@
     <main class="brand-page">
         <section class="brand-header">
             <img src="assets/icons/logo-chromo.png" alt="Логотип ValeyevStudio" class="brand-logo">
-            <h1 class="brand-title brand-head-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand material</h1>
+            <h1 class="brand-title brand-head-title theme-text" data-i18n="brand.head.title">ValeyevStudio brand
+                material</h1>
             <p class="brand-description">
                 Download our official materials and read the rules for their use.
                 <a href="about.html#rules-material" class="brand-rules-link">Read the rules</a>
@@ -65,20 +66,21 @@
             </div>
             <div class="color-palette">
                 <div class="color-item">
-                    <div class="color-circle circle-one" style="background-color: #884BC1;"></div>
+                    <div class="color-circle circle-one" style="background-color: #28A7E8;"></div>
                     <ul class="color-values values-one">
-                        <li><strong>HEX</strong> #0077FF</li>
-                        <li><strong>RGB</strong> 136 75 193</li>
-                        <li><strong>CMYK</strong> 0 0 0 0</li>
-                        <li><strong>PANTONE</strong> Purple</li>
+                        <li><strong>HEX</strong> #28A7E8</li>
+                        <li><strong>RGB</strong> 40, 167, 232</li>
+                        <li><strong>CMYK</strong> 83%, 28%, 0%, 9%</li>
+                        <li><strong>PANTONE</strong> Bright Sky Blue</li>
                     </ul>
                 </div>
                 <div class="color-item">
-                    <div class="color-circle circle-two" style="background-color: #FFFFFF; border: 1px solid #ccc;"></div>
+                    <div class="color-circle circle-two" style="background-color: #FFFFFF; border: 1px solid #ccc;">
+                    </div>
                     <ul class="color-values values-two">
                         <li><strong>HEX</strong> #FFFFFF</li>
-                        <li><strong>RGB</strong> 255 255 255</li>
-                        <li><strong>CMYK</strong> 0 0 0 0</li>
+                        <li><strong>RGB</strong> 255, 255, 255</li>
+                        <li><strong>CMYK</strong> 0%, 0%, 0%, 0%</li>
                         <li><strong>PANTONE</strong> WHITE</li>
                     </ul>
                 </div>
@@ -86,8 +88,8 @@
                     <div class="color-circle circle-three" style="background-color: #000000;"></div>
                     <ul class="color-values values-three">
                         <li><strong>HEX</strong> #000000</li>
-                        <li><strong>RGB</strong> 0 0 0</li>
-                        <li><strong>CMYK</strong> 0 0 0 100</li>
+                        <li><strong>RGB</strong> 0, 0, 0</li>
+                        <li><strong>CMYK</strong> 0%, 0%, 0%, 100%</li>
                         <li><strong>PANTONE</strong> BLACK 6 C</li>
                     </ul>
                 </div>
@@ -99,20 +101,26 @@
 
             <div class="partner-column left">
                 <h3 class="partner-title media-partner-title theme-text" data-i18n="partner.media.title">For media</h3>
-                <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media partnership inquiries and special projects.</p>
+                <p class="partner-description partner-media-description" data-i18n="partner.media.description">For media
+                    partnership inquiries and special projects.</p>
                 <a href="mailto:media@valeyevstudio.com" class="partner-link link-mediamail">media@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column center">
-                <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Press Representatives</h3>
-                <p class="partner-description partner-press-description" data-i18n="partner.press.description">Press office contact for media inquiries.</p>
+                <h3 class="partner-title partner-press-title theme-text" data-i18n="partner.press.title">Press
+                    Representatives</h3>
+                <p class="partner-description partner-press-description" data-i18n="partner.press.description">Press
+                    office contact for media inquiries.</p>
                 <a href="mailto:press@vk.com" class="partner-link link-pressmail">press@valeyevstudio.com</a>
             </div>
 
             <div class="partner-column right">
-                <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">ValeyevStudio Materials</h3>
-                <p class="partner-description partner-materials-description" data-i18n="partner.materials.description">Main products and materials of our studio.</p>
-                <a href="#brand-material" class="partner-link partner-material-link" data-i18n="partner.materials.link">Learn More</a>
+                <h3 class="partner-title partner-materials-title theme-text" data-i18n="partner.materials.title">
+                    ValeyevStudio Materials</h3>
+                <p class="partner-description partner-materials-description" data-i18n="partner.materials.description">
+                    Main products and materials of our studio.</p>
+                <a href="#brand-material" class="partner-link partner-material-link"
+                    data-i18n="partner.materials.link">Learn More</a>
             </div>
         </section>
 
@@ -121,7 +129,8 @@
             <div class="brand-info-card">
                 <img src="assets/icons/smile.png" alt="Info Icon" class="brand-info-icon">
                 <p class="brand-info-text theme-text" data-i18n="brand.info.text">
-                    We are happy to provide our services, technologies, and materials as widely as possible in the global market.
+                    We are happy to provide our services, technologies, and materials as widely as possible in the
+                    global market.
                 </p>
             </div>
         </div>
