Update UI FAQ + add new localization

--- a/home.html
+++ b/home.html
@@ -464,7 +464,7 @@
                 <span class="faq-button-account" data-i18n="faq-button-account">Account</span>
             </button>
             <button class="tab-button theme-tab-button" data-tab="security">
-                <img src="assets/icons/security.svg" class="tab-icon theme-icon" />
+                <img src="assets/icons/lock.svg" class="tab-icon theme-icon" />
                 <span class="faq-button-security" data-i18n="faq-button-security">Security</span>
             </button>
             <button class="tab-button theme-tab-button" data-tab="other">
