Update UI FAQ + add new localization v2

--- a/home.html
+++ b/home.html
@@ -479,45 +479,50 @@
 
                 <div class="accordion-item" id="main-item-one">
                     <div class="accordion-header">
-                        <span class="faq-main-question-1 theme-text" data-i18n="faq-main-question-1">Why choose us?</span>
+                        <span class="faq-main-question-1 theme-text" data-i18n="faq-main-question-1">Why choose
+                            us?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-main-answer-1 gray-text" data-i18n="faq-main-answer-1">
-                        Мы — команда разработчиков, которые заинтересованы в том, чтобы предоставить продукт максимально
-                        большому
-                        количеству людей на планете, чтобы каждый мог попробовать наш продукт. Это всё абсолютно
-                        бесплатно!
+                        We are a team of developers who are interested in providing the product as much as possible.
+                        the big one
+                        the number of people on the planet, so that everyone can try our product. It's all absolutely
+                        For free!
                     </div>
                 </div>
 
                 <div class="accordion-item" id="main-item-two">
                     <div class="accordion-header">
-                        <span class="faq-main-question-2 theme-text" data-i18n="faq-main-question-2">How do I start using the program?</span>
+                        <span class="faq-main-question-2 theme-text" data-i18n="faq-main-question-2">How do I start
+                            using the program?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-main-answer-2 gray-text" data-i18n="faq-main-answer-2">
-                        Чтобы скачать наше фирменное ПО, перейдите в соответствующий раздел сайта и нажмите кнопку
+                        To download our proprietary software, go to the appropriate section of the website and click
                         Download.
                         <br><br>
-                        Помните, что скачивая наше ПО, вы соглашаетесь с пользовательским соглашением и политикой нашей
-                        компании —
+                        Please remember that by downloading our Software, you agree to the user agreement and our
+                        policy.
+                        the company —
                         ValeyevStudio.
                     </div>
                 </div>
 
                 <div class="accordion-item" id="main-item-three">
                     <div class="accordion-header">
-                        <span class="faq-main-question-3 theme-text" data-i18n="faq-main-question-3">What is the cost of the paid subscription?</span>
+                        <span class="faq-main-question-3 theme-text" data-i18n="faq-main-question-3">What is the cost of
+                            the paid subscription?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-main-answer-3 gray-text" data-i18n="faq-main-answer-3">
-                        Ценовая стоимость платной подписки составляет 1 доллар США. Подписка, после активации, даётся на
+                        The price of a paid subscription is 1 USD. The subscription, after activation, is given for
                         1
-                        календарный месяц с момента активации.
+                        a calendar month from the moment of activation.
                         <br><br>
-                        Подписка даёт возможность через настройки убрать навязчивый баннер и получить доступ к
-                        экспериментальным
-                        функциям.
+                        The subscription allows you to remove the intrusive banner through the settings and get access
+                        to
+                        experimental
+                        functions.
                     </div>
                 </div>
 
@@ -530,11 +535,12 @@
 
                 <div class="accordion-item" id="sub-item-one">
                     <div class="accordion-header">
-                        <span class="faq-sub-question-1 theme-text" data-i18n="faq-sub-question-1">What subscription plans are available?</span>
+                        <span class="faq-sub-question-1 theme-text" data-i18n="faq-sub-question-1">What subscription
+                            plans are available?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-sub-answer-1 gray-text" data-i18n="faq-sub-answer-1">
-                        Пока доступен только один план подписки стоимостью 1 доллар в месяц.
+                        So far, only one subscription plan is available, costing $1 per month.
                     </div>
                 </div>
 
@@ -547,11 +553,12 @@
 
                 <div class="accordion-item" id="account-item-one">
                     <div class="accordion-header">
-                        <span class="faq-account-question-1 theme-text" data-i18n="faq-account-question-1">How can I update my account information?</span>
+                        <span class="faq-account-question-1 theme-text" data-i18n="faq-account-question-1">How can I
+                            update my account information?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-account-answer-1 gray-text" data-i18n="faq-account-answer-1">
-                        Изменить данные можно через раздел "Настройки аккаунта" в личном кабинете.
+                        You can change the data through the "Account Settings" section in your personal account.
                     </div>
                 </div>
 
@@ -564,66 +571,72 @@
 
                 <div class="accordion-item" id="security-item-one">
                     <div class="accordion-header">
-                        <span class="faq-security-question-1 theme-text" data-i18n="faq-security-question-1">Is my data safe?</span>
+                        <span class="faq-security-question-1 theme-text" data-i18n="faq-security-question-1">Is my data
+                            safe?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-security-answer-1 gray-text" data-i18n="faq-security-answer-1">
-                        <strong>Абсолютная безопасность ваших данных</strong><br><br>
-                        Мы заботимся о защите каждого пользователя:
+                        <strong>Absolute security of your data</strong><br><br>
+                        We take care of the protection of every user.:
                         <ul>
-                            <li>Пароли шифруются с использованием алгоритма <strong>bcrypt</strong>, который надёжно
-                                защищает от атак
-                                перебором.</li>
-                            <li>Все данные передаются по <strong>зашифрованному соединению (HTTPS)</strong> — никакой
-                                возможности для
-                                перехвата.</li>
-                            <li>Наши серверы и системы настроены так, чтобы исключить любые уязвимости: мы применяем
-                                только
-                                <strong>проверенные методы и инструменты безопасности</strong>.
+                            <li>Passwords are encrypted using the <strong>bcrypt</strong> algorithm, which is reliable
+                                protects against attacks
+                                Overkill.</li>
+                            <li>All data is transmitted over a <strong>encrypted connection (HTTPS)</strong> — no
+                                opportunities for
+                                interception.</li>
+                            <li>Our servers and systems are configured to eliminate any vulnerabilities: we apply
+                                only
+                                <strong>proven security methods and tools</strong>.
                             </li>
-                            <li>Даже в случае попытки взлома, получить доступ к вашим данным невозможно — благодаря
-                                <strong>многоуровневой архитектуре безопасности</strong>.
+                            <li>Even in the case of a hacking attempt, it is impossible to gain access to your data —
+                                thanks to
+                                <strong>multi-level security architecture</strong>.
                             </li>
                         </ul>
-                        Ваши данные — под надёжной защитой. Мы сделали всё, чтобы вы могли сосредоточиться на главном.
+                        Your data is securely protected. We have done everything so that you can focus on the main
+                        thing.
                     </div>
                 </div>
 
                 <div class="accordion-item" id="security-item-two">
                     <div class="accordion-header">
-                        <span class="faq-security-question-2 theme-text" data-i18n="faq-security-question-2">How secure is password changing?</span>
+                        <span class="faq-security-question-2 theme-text" data-i18n="faq-security-question-2">How secure
+                            is password changing?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-security-answer-2 gray-text" data-i18n="faq-security-answer-2">
-                        Смена пароля осуществляется через <strong>уникальный шифрованный токен</strong>, который
-                        действует
-                        <strong>строго ограниченное время</strong> — он автоматически истекает сразу после выполнения
-                        операции.
+                        The password is changed via a <strong>unique encrypted token</strong>, which
+                        It works
+                        <strong>strictly limited time</strong> — it expires automatically immediately after execution
+                        operations.
                         <br><br>
-                        Это гарантирует, что доступ к смене пароля получают только авторизованные пользователи, и
-                        исключает
-                        возможность перехвата или повторного использования. Мы применяем <strong>современные
-                            криптографические
-                            методы</strong>, чтобы обеспечить максимальную безопасность этой процедуры.
+                        This ensures that only authorized users have access to changing the password, and
+                        excludes
+                        the possibility of interception or reuse. We use <strong>modern
+                            cryptographic
+                        </strong> methods to ensure maximum security of this procedure.
                     </div>
                 </div>
 
 
                 <div class="accordion-item" id="security-item-three">
                     <div class="accordion-header">
-                        <span class="faq-security-question-3 theme-text" data-i18n="faq-security-question-3">How can I enable extra account protection?</span>
+                        <span class="faq-security-question-3 theme-text" data-i18n="faq-security-question-3">How can I
+                            enable extra account protection?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-security-answer-3 gray-text" data-i18n="faq-security-answer-3">
-                        В пользовательском меню вы можете открыть раздел <strong>«Настройки»</strong>. На странице
-                        настроек доступен
-                        подраздел <strong>«Безопасность»</strong>, где вы можете включить <strong>двухфакторную
-                            аутентификацию
-                            (2FA)</strong> через <strong>Google Authenticator</strong>.<br><br>
-                        Это добавит дополнительный уровень защиты: даже если кто-то узнает ваш пароль, без кода из
-                        приложения он не
-                        сможет получить доступ к вашему аккаунту. <br><br>
-                        <strong>2FA — один из самых эффективных способов защитить ваши данные от взлома.</strong>
+                        In the user menu, you can open the <strong>"Settings"</strong> section. On the page
+                        settings are available
+                        subsection <strong>"Security"</strong>, where you can enable <strong>two-factor
+                            authentication
+                            (2FA)</strong> via <strong>Google Authenticator</strong>.<br><br>
+                        This will add an additional layer of protection: even if someone finds out your password,
+                        without the code from
+                        applications he doesn't
+                        will be able to access your account. <br><br>
+                        <strong>2FA is one of the most effective ways to protect your data from hacking.</strong>
                     </div>
                 </div>
 
@@ -636,11 +649,12 @@
 
                 <div class="accordion-item" id="other-item-one">
                     <div class="accordion-header">
-                        <span class="faq-other-question-1 theme-text" data-i18n="faq-other-question-1">Where is your company located?</span>
+                        <span class="faq-other-question-1 theme-text" data-i18n="faq-other-question-1">Where is your
+                            company located?</span>
                         <img src="assets/icons/angle-small-down.svg" class="accordion-arrow theme-icon" />
                     </div>
                     <div class="accordion-body faq-other-answer-1 gray-text" data-i18n="faq-other-answer-1">
-                        Мы — распределённая команда, работающая по всему миру. У нас нет единого физического офиса.
+                        We are a distributed team working all over the world. We do not have a single physical office.
                     </div>
                 </div>
 
