--- a/referal.html
+++ b/referal.html
@@ -376,7 +376,11 @@
 
     <div class="referals-card-inviteusers-container">
         <div class="referals-card-inviteusers theme-card">
-            <!-- Добавляй новые .invite-user блоки тут -->
+            <h3 class="inviteusers-title theme-text" data-i18n="referral.invited_users_heading">
+                The users you invited
+            </h3>
+            <div class="inviteusers-divider"></div>
+            <!-- Приглашенные польльзователи добовляются из refferals.js -->
         </div>
     </div>
 
