Update animation + referal page

--- a/referal.html
+++ b/referal.html
@@ -379,7 +379,7 @@
             <h3 class="inviteusers-title theme-text" data-i18n="referral.invited_users_heading">
                 The users you invited
             </h3>
-            <div class="inviteusers-divider"></div>
+            <div class="inviteusers-divider theme-line"></div>
             <!-- Приглашенные польльзователи добовляются из refferals.js -->
         </div>
     </div>
