Update animation + referal page v7

--- a/referal.html
+++ b/referal.html
@@ -380,7 +380,7 @@
                 The users you invited
             </h3>
             <div class="inviteusers-divider theme-line"></div>
-            <!-- Приглашенные польльзователи добовляются из refferals.js -->
+            <div class="inviteusers-list"></div> <!-- сюда будем добавлять пользователей -->
         </div>
     </div>
 
