Update animation + referal page v8

--- a/referal.html
+++ b/referal.html
@@ -377,10 +377,10 @@
     <div class="referals-card-inviteusers-container">
         <div class="referals-card-inviteusers theme-card">
             <h3 class="inviteusers-title theme-text" data-i18n="referral.invited_users_heading">
-                The users you invited
+                Приглашённые вами пользователи
             </h3>
-            <div class="inviteusers-divider theme-line"></div>
-            <div class="inviteusers-list"></div> <!-- сюда будем добавлять пользователей -->
+            <div class="inviteusers-divider"></div>
+            <!-- Приглашенные польльзователи добовляются из refferals.js -->
         </div>
     </div>
 
