--- a/referal.html
+++ b/referal.html
@@ -36,7 +36,7 @@
             <ul>
                 <li><a href="home.html" class="nav-home">Home</a></li>
                 <li><a href="products.html" class="nav-our-products">Our Products</a></li>
-                <li><a href="about.html" class="nav-about-us active">About us</a></li>
+                <li><a href="about.html" class="nav-about-us">About us</a></li>
             </ul>
         </nav>
         <div class="actions">
@@ -206,7 +206,7 @@
                 <nav class="mobile-nav">
                     <a href="/home.html" class="mobile-nav-home">Home</a>
                     <a href="/products.html" class="mobile-nav-our-products">Our Products</a>
-                    <a href="/about.html" class="mobile-nav-about-us active">About Us</a>
+                    <a href="/about.html" class="mobile-nav-about-us">About Us</a>
                 </nav>
             </div>
 
